--- a/Module 2/2 Generating Random Variables.Rmd
+++ b/Module 2/2 Generating Random Variables.Rmd
@@ -29,26 +29,30 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 
 In this section we'll cover the following methods for generating random numbers from a target distribution.
 
-1. Inverse Transform Method
+1. Uniform random samples
 
-2. Accept-Reject Method
+2. Transformation Method
 
-3. Transformation Method
+3. Inverse Transform Method
 
-4. Sums and Mixture distributions
+4. Accept-Reject Method
 
 
-## Pseu-random numbers  { .selectable }
 
-One of the fundamental tools required in Monte Carlo methods is the ability to generate consistent *pseudo*-random variables from a specified probability distribution. One of the most fundamental number generation is the uniform random number generation
 
-- Can sample from many distributions with the help of uniform random numbers
 
-- Pseudo random number genrators rely on the assumption that computational methods can consistently generate uniform random numbers.
+
+## Pseudo-random numbers  { .selectable }
+
+One of the fundamental tools required in Monte Carlo methods is the ability to generate consistent *pseudo*-random variables from a specified probability distribution. One of the most fundamental tools is a uniform random number generater
+
+- Can sample from many distributions with transformations of of uniform random samples
+
+- Computers on their own can't generate *randomness*, but they can simulate what *random* may look like
 
 In R, we can control how random variables are generated. For example, we can specify seed for random number generation, see the function [`set.seed`](https://stat.ethz.ch/R-manual/R-devel/library/base/html/Random.html)
 
-- `set.seed` allows us to control the start and flow (*state*) of random number generation with a numeric "seed"
+- `set.seed` allows us to control the start and flow (*state*) of random number generation in a program
 
 - Useful for reproducibility
 
@@ -57,7 +61,7 @@ In R, we can control how random variables are generated. For example, we can spe
 
 ## Generation uniform samples { .selectable } 
 
-Random number generation for statistical purposes heavily relies on being able to obtain reliable samples from a Uniform distribution. There is a long history of work that has gone into this. Computers on their own can't generate *randomness*, but they can simulate what *random* may look like.
+Random number generation for statistical purposes heavily relies on the assumption that computational methods can consistently generate *independent* uniform random numbers. 
 
 
 ```{r, eval = FALSE}
@@ -70,14 +74,16 @@ lines(density(u), xlim=c(0,1))
 qqplot(qunif(ppoints(500)), u,  main = expression("Q-Q plot for Unif(0,1)"))
 qqline(u, distribution = qunif, prob = c(0.1, 0.6), col = 2)
 
+acf(u, main = "autocorrelation of samples")  ## autocorrelation function
+
 ```
 
 
 
-```{r, fig.height=2, fig.width=6, echo=FALSE}
+```{r, fig.height=2.5, fig.width=7, echo=FALSE}
 u = runif(2000)
 
-par(pin = c(2,1), mfrow = c(1,2))
+par(pin = c(2,1), mfrow = c(1,3))
 hist(u, probability=TRUE)
 lines(density(u), xlim=c(0,1))
 
@@ -86,23 +92,23 @@ qqplot(qunif(ppoints(500)), u,  main = expression("Q-Q plot for Unif(0,1)"))
 qqline(u, distribution = qunif, prob = c(0.1, 0.6), col = 2)
 
 
+acf(u, main = "autocorrelation of samples")  ## autocorrelation function
+
 ```
 
 
-## Generation uniform samples { .selectable }
+## Generation of uniform samples { .selectable }
 
-If $u \sim Unif(0,1)$, then $(1 - u) \sim Unif(0,1)$
+For a random variable $u \sim Unif(0,1)$, then $(1 - u) \sim Unif(0,1)$
 
 ```{r, fig.height=3.2, fig.width=6, echo=FALSE}
 require(graphics)
-palette(value = rainbow(6))
+palette(value = rainbow(2))
 
 par(pin = c(2,2), mfrow = c(1,2))
 qqplot(qunif(ppoints(500)),1-u, main = "U against 1 - U")
 qqline(u, distribution = qunif, col = 2)
 
-acf(u, main = "autocorrelation of samples") 
-
 
 ```
 
@@ -110,8 +116,6 @@ acf(u, main = "autocorrelation of samples")
 ```{r, eval = FALSE}
 qqplot(qunif(ppoints(500)),1-u, main = "U against 1 - U")
 qqline(u, distribution = qunif, col = 2)
-
-acf(u, main = "autocorrelation of samples") 
 
 ```
 
@@ -119,17 +123,15 @@ It is important to generate samples that are not correlated with each other!
 
 
 
-## Generation uniform samples, pt. 2 { .selectable }
+## Generation of uniform samples, pt. 2 { .selectable }
 
-Once we can simulate $u \sim Unif(0,1)$, we can begin generating samples from other target distributions. How could we simulate $v \sim Unif(0,10)$? Well, we could simply include a multiplicative constant such that $v = 10 \times u$.
+Once we can simulate $u \sim Unif(0,1)$, we can begin generating samples from another target distributions. How could we simulate $v \sim Unif(0,10)$? Well, we could simply include a multiplicative constant such that $v = 10 \times u$.
 
 ```{r, eval=FALSE}
 v = 10 * runif(1000, 0, 1) ## v ~ unif(0, 10)
 hist(v)
-
 w = runif(1000, 0, 10) ## unif(0, 10)
 hist(w)
-
 
 ```
 
@@ -147,17 +149,66 @@ hist(w)
 
 
 
+## Transformation Methods { .selectable }
 
+- Distributions sometimes share direct relationships. 
+- If the relationship between the distributions is simple we can exploit it to generate random variables 
+- We can sample from a "easy to simulate" distribution and then transform those random variables to generate samples from a "difficult to simulate" distribution. 
+
+To review some common relationships see the following: [Relationships among probability distributions][4]
+
+- Some easy *instrumental* distributions which are easy to sample from include $Unif(a,b)$, $Exp(\theta)$. 
+
+- Some distributions that are more difficult to sample from include the $N(\mu, \sigma)$ and **MVN**  distributions.
+
+
+## Example: Binomial samples { .selectable }
+
+Another use of generating samples $U \sim U(0,1)$ is to generate Bernoulli. Once we've generated $n$ Bernoulli samples, we can sum the Bernouilli samples to generate Binomial samples. Reference: [Notes](http://www.stat.ufl.edu/~abhisheksaha/sta4321/lect12.pdf)
+
+$$
+u \sim Unif(0,1) \\
+x  = I(u \leq p) \text{ such that } x \sim Bernoulli(p) \\
+y = \sum_{i=1}^n x_i \text{ such that } y \sim Bin(n,p) \\
+$$
+
+```{r}
+## let's simulate 10,000 samples from bin(n=10, p = 0.3)
+N = 10000 ## number of Binomial samples
+n = 10 ## number of bernoulli trials for each binomail sample
+p = 0.3 ## theoretical p
+u =  runif(n = (n*N))
+x = as.numeric(u <= p) ## convert bools to 1 and 0; Bernoulli samples
+m = matrix(data = x , nrow = N, ncol = n)
+Binom_samples = rowSums(m) ## binomial samples
+```
+
+
+## Example: Binomial samples, pt. 2
+
+```{r, fig.height=4, fig.width=7}
+par(mfrow = c(1,2), mar = c(3, 4, 1, 2))
+hist(Binom_samples, probability = TRUE, main = "Binom(10,0.3) from Unif(0,1)", 
+     col = "blue", border = "white")
+hist(rbinom(n = N, size = n, prob = p), probability = TRUE, main = "rbinom(10,0.3)",
+     col = "gray", border = "white")
+par(mfrow=c(1,1))
+
+
+
+```
 
 
 
 
 ## Inverse Transform Method { .selectable }
 
-General idea: only using a uniform distribution, generate random values and use an inverse CDF of the target distribution for which you wish to simulate. See the following link for further discussion: [How does the inverse transform method work?][1]
+The inverse transform method is a simple algorithm for generating random variables $x$ from a *continuous* target distribution $f(x)$ using random samples from a $Unif(0,1)$ distribution.
 
-### Theorem (Probability Integral Transformation): 
-If $X$ is a continuous random variable with CDF $F_X(X)$, then $U = F_X(X) \sim Unif(0,1)$. If $U \sim Unif(0,1)$, then for all $x \in \mathbb R$
+General idea: evaluate random variables $u \sim Unif(0,1)$ using the inverse CDF of the target distribution for which you wish to simulate from. See the following link for further discussion: [How does the inverse transform method work?][1]
+
+**Theorem (Probability Integral Transformation): **
+If $X$ is a *continuous* random variable with CDF $F_X(X)$, then $U = F_X(X) \sim Unif(0,1)$. If $U \sim Unif(0,1)$, then for all $x \in \mathbb R$
 
 $$
 \begin{aligned}
@@ -177,9 +228,11 @@ and therefore $F_X^{-1}(U)$ has the same distribution as $X$.
 
 Algorithm:
 
-1. For target probability density function (*pdf*) $f(X)$, calculate the inverse of the CDF by setting $F(X) = U$, then solving for $X$, for which $U \sim Unif(0,1)$.
+1. For target probability density function (*pdf*) $f(X)$, calculate the CDF, $F(X)$
 
-2. Generate $n$ random numbers from $u \sim Unif(0,1)$
+2. Set the CDF equal to $U$, $F(X) = U$, then solving for $X$, obtaining $F^{-1}(U) = X$
+
+2. Generate $n$ random variables from $u \sim Unif(0,1)$
 
 3. Plug in $u$ observed values in $F^{-1}(U = u)$ to obtain $n$ values for which $x \sim f(X)$
 
@@ -293,7 +346,7 @@ curve(pareto(x), from = 0, to = 40, add = TRUE, col = "blue")
 
 ## Inverse Transform Discrete scenario { .selectable }
 
-For a given an ordered discrete random sample $... < x_{i-1} < x_{i} < x_{i+1} < ...$ from a distribution $f(X)$, with CDF $F(x)$. Then, the inverse transformation $F_X^{-1}(u) = x_i$, where $F_X(x_{i-1}) < u \leq F_X(x_i)$. Then for each random variable desired,
+For a given ordered discrete random sample $x_1 < ... < x_{i-1} < x_{i} < x_{i+1} < ...< x_n$ from a distribution $f(X)$, with CDF $F(x)$. Then, the inverse transformation $F_X^{-1}(u) = x_i$, where $F_X(x_{i-1}) < u \leq F_X(x_i)$. Then for each random variable desired
 
 1. Generate a random variable $u \sim Unif(0,1)$
 
@@ -301,7 +354,7 @@ For a given an ordered discrete random sample $... < x_{i-1} < x_{i} < x_{i+1} <
 
 
 
-As an example take the following distribution $P(X = 0) = 0.1$, $P(X = 1) = 0.2$, $P(X = 2) = 0.2$, $P(X = 3) = 0.2$, and $P(X = 4) = 0.3$, use the inverse transform method to generate a random sample of size 1000 from the distribution.
+As an example, take the following distribution $P(X = 0) = 0.1$, $P(X = 1) = 0.2$, $P(X = 2) = 0.2$, $P(X = 3) = 0.2$, and $P(X = 4) = 0.3$, use the inverse transform method to generate a random sample of size 1000 from the distribution.
 
 $$
 F(X \leq x) = 
@@ -363,11 +416,13 @@ for all t such that $f(t) > 0$. If we'd like to simulate from the target density
 
 ## The Accept-Reject Algorithm { .selectable }
 
-1. Generate $Y \sim g_Y(t)$ and $U \sim Unif(0,1)$
+To generate $n$ samples, `for(i in 1:n)`
 
-2. If $U \leq \frac{f(Y)}{M \times g(Y)}$ then we accept $Y$, such that $Y =  X$
+  1. Generate $Y \sim g_Y(t)$ and $U \sim Unif(0,1)$
 
-3. Repeat until you have sufficient samples
+  2. If $U \leq \frac{f(Y)}{M \times g(Y)}$ then we accept $Y$, such that $Y =  X$
+
+  3. Repeat until you have sufficient samples
 
 
 
@@ -381,12 +436,50 @@ In order for the algorithm to work we require the following constraings:
 
 ## Example: Beta(2,2) { .selectable }
 
-Supposed we'd like to generate 1,000 samples from $Beta(2,2)$, $f$. The density function for $Beta(2,2)$ is simply $f(x) = 6x(1 - x)$ for $0 < x < 1$. Since our domain is between 0 and 1, we can use a simple $Unif(0,1)$ density as our instrumental density, $g$. Then, by the accept-reject algorithm we can simulate a random variable $Y \sim g$, and a random variable $U \sim Unif(0,1)$. Then, if 
+Suppose we'd like to generate samples from $Beta(2,2)$ distribution. The density function for $Beta(2,2)$ is simply $f(x) = 6x(1 - x)$ for $0 < x < 1$. Since our domain is between 0 and 1, we can use a simple $Unif(0,1)$ density as our instrumental density, $g$. Then, by the accept-reject algorithm we can simulate a random variable $Y \sim g$, and a random variable $U \sim Unif(0,1)$. Then, if 
 $$
-U \leq \frac{f(Y)}{M \times g(Y)}
+M \times U \leq \frac{f(Y)}{ g(Y)}
 $$
-we accept the candidate variable $Y \sim g$ as $X$, $X = Y$. Otherwise, we reject $Y$ and simulate again until we get an appropriate sample size. Note that the target density $f$ has a maximum of 1.5, so we can set M = 1.5; see: [Max of Beta(2,2)](http://www.wolframalpha.com/input/?i=max+6x(1+-+x))
+we accept the candidate variable $Y \sim g$ as $X$, $X = Y$. Otherwise, we reject $Y$ and simulate again until we get an appropriate sample size. 
 
+
+```{r, echo = FALSE, fig.height=3, fig.width=9}
+
+par(mfrow = c(1,2), mar = c(3, 4, 1, 2))
+beta <- function(x) 6*x*(1-x)
+M = 1.5
+## plot 2
+curve(expr = beta, from = 0, to = 1, 
+      xlim = c(-0.5, 1.5), ylim = c(0,2),
+      main = "Beta(2,2) Density with Unif(0,1)",
+      xlab = "x", ylab = "density")
+
+x = seq(from = -1, to = 2, by = 0.01)
+Unif1 = function(x){ ifelse(x >= 0 & x <= 1, 1, 0) }
+polygon(x, Unif1(x), lty = 9)
+
+## plot 3
+curve(expr = beta, from = 0, to = 1, 
+      xlim = c(-0.2, 1.2), ylim = c(0,2),
+      main = "Beta(2,2) with M*Unif(0,1)",
+      xlab = "x", ylab = "density")
+
+Unif2 = function(x){ ifelse(x >= 0 & x <= 1, 1*M, 0) }
+polygon(x, Unif2(x), lty = 2)
+
+#abline(h = 1.5, col = "red")
+par(mfrow=c(1,1))
+
+
+```
+
+
+
+
+## Example: Beta(2,2), pt. 2 { .selectable }
+
+
+Note that the target density $f$ has a maximum of 1.5, so we can set M = 1.5; see: [Max of Beta(2,2)](http://www.wolframalpha.com/input/?i=max+6x(1+-+x))
 
 ```{r}
 ## Accept-Reject
@@ -403,15 +496,16 @@ n = 10000
 
 ## Example: Beta(2,2), pt. 2 { .selectable }
 
-First, we'll generate 5 samples
-```{r}
+First, we'll generate 5 samples to test the algorithm
+
+```{r, eval=TRUE}
 
 for(i in 1:5){
   print(paste("Run: ", i))
-  u = runif(1)
-  y = runif(1)
-  print(paste("U: ", u, "and Y:", y))
+  u = round(runif(1), 5)
+  y = round(runif(1), 5)
   accept <- u <= f(y)/(M* g(y))
+  print(paste("U: ", u, "and Y:", y, "and f/M*g: ",f(y)/(M* g(y))))
   print(paste("Accept? ", accept))
   if(accept){
     X[i] <- y
@@ -440,7 +534,7 @@ while(sum(is.na(X))){
 }
 
 round(summary(X), 4)
-round(summary(rbeta(n = n, shape1 = 2, shape2 = 2)), 4)
+round(qbeta(p = c(0, 0.25, 0.5, 0.75, 1), 2, 2), 4)
 ```
 
 
@@ -448,17 +542,10 @@ round(summary(rbeta(n = n, shape1 = 2, shape2 = 2)), 4)
 
 
 ```{r, echo = FALSE, fig.height=3, fig.width=9}
-
 par(mfrow = c(1,3), mar = c(3, 4, 1, 2))
+beta <- function(x) 6*x*(1-x)
 
 ## plot 1
-hist(X, xlab = "X", main = "Beta(2,2) from Accept-Reject algorithm", 
-     probability = TRUE)
-beta <- function(x) 6*x*(1-x)
-curve(expr = beta, from = 0, to = 1, add = TRUE)
-
-
-## plot 2
 curve(expr = beta, from = 0, to = 1, 
       xlim = c(-0.5, 1.5), ylim = c(0,2),
       main = "Beta(2,2) Density with Unif(0,1)",
@@ -468,7 +555,7 @@ x = seq(from = -1, to = 2, by = 0.01)
 Unif1 = function(x){ ifelse(x >= 0 & x <= 1, 1, 0) }
 polygon(x, Unif1(x), lty = 9)
 
-## plot 3
+## plot 2
 curve(expr = beta, from = 0, to = 1, 
       xlim = c(-0.2, 1.2), ylim = c(0,2),
       main = "Beta(2,2) with M*Unif(0,1)",
@@ -477,9 +564,10 @@ curve(expr = beta, from = 0, to = 1,
 Unif2 = function(x){ ifelse(x >= 0 & x <= 1, 1*M, 0) }
 polygon(x, Unif2(x), lty = 2)
 
-#abline(h = 1.5, col = "red")
-par(mfrow=c(1,1))
-
+## plot 3
+hist(X, xlab = "X", main = "Beta(2,2) from Accept-Reject algorithm", 
+     probability = TRUE, col = "gray", border = "white")
+curve(expr = beta, from = 0, to = 1, add = TRUE)
 
 ```
 
@@ -526,7 +614,7 @@ polygon(x, Unif2(x), lty = 2)
 
 
 ```{r}
-N = 10000; U = runif(N); Y = runif(N); M = 1.5
+N = 1000; U = runif(N); Y = runif(N); M = 1.5
 
 f <- function(x){ 6*x*(1 - x)} ## pdf of Beta(2,2)
 g <- function(x){ 1 } ## pdf of Unif(0,1) is just 1
@@ -544,7 +632,7 @@ Exercise: Change the value of M to see how the performance of the algorithm chan
 
 ```{r, echo=FALSE, fig.height=4, fig.width=5}
 par(mar = c(3, 4, 1, 2))
-
+palette(value = rainbow(6))
 plot(Y, U*M, col = as.numeric(accept)+3, 
      xlim = c(-0.2, 1.2), ylim = c(0,2),
      main = "Accept-Reject with M = 1.5")
@@ -586,13 +674,14 @@ polygon(x, Unif2(x), lty = 2, lwd = 2)
 
 
 
-## Transformation Methods { .selectable }
 
-- Distributions sometimes share relationships, and if the relationship is simple we can exploit it to generate random variables from a "simple to simulate" distribution and transform those random variables to generate samples from a "difficult to simulate" distribution. I'll give some examples below. 
 
-- First, see the following Wikipedia page for some relationships: [Relationships among probability distributions][4]
 
-Now that we've covered how to simulate random variables from an $Exp(\theta)$ distribution ("simple to simulate"), I'll cover how to generate some random variables from "harder to simulate" distributions.
+## Other Transformation Methods { .selectable }
+
+Now that we've covered how to simulate random variables from an $Exp(\theta)$ distribution ("simple to simulate"), I'll cover how to generate some random variables for these "harder to simulate" distributions using transformation methods.
+
+
 
 From a uniform distribution, $U \sim Unif(0,1)$ we can generate $X \sim Exp(1)$ to then generate the following:
 
@@ -605,34 +694,8 @@ From a uniform distribution, $U \sim Unif(0,1)$ we can generate $X \sim Exp(1)$ 
 Try these yourself!
 
 
-## Example: Binomial trials { .selectable }
-
-Another use of generating samples $U \sim U(0,1)$ is to generate Bernoulli and Binomial samples. For example, let $Y = \sum_{i = 0}^{N} X_i$ where $X ~ Bernoulli(p)$ such that $Y \sim Bin(n,p)$
-
-```{r}
-## let's simulate 10,000 samples from bin(n=10, p = 0.3)
-N = 10000
-n = 10
-p = 0.3
-x = as.numeric(runif(n = (n*N)) <= p) ## convert bools to 1 and 0
-m = matrix(data = x, nrow = N, ncol = n)
-Binom_samples = rowSums(m) 
-```
 
 
-## Example: Binomial trials, pt. 2
-
-```{r, fig.height=4, fig.width=7}
-par(mfrow = c(1,2), mar = c(3, 4, 1, 2))
-hist(Binom_samples, probability = TRUE, main = "Binom(10,0.3) from Unif(0,1)", 
-     col = "blue")
-hist(rbinom(n = N, size = n, prob = p), probability = TRUE, main = "rbinom(10,0.3)",
-     col = "cyan")
-par(mfrow=c(1,1))
-
-
-
-```
 
 
 
@@ -667,7 +730,7 @@ $$
 
 From the last equation, we see that we'd be taking the square root of negative values which would be problematic. Therefore, we need an alternative algorithm. 
 
-From information on the Rayleigh distribution, we know that given two i.i.d. random variables $Z_1, Z_2 \sim N(0, \sigma)$ then $R = \sqrt{ Z_1^2 + Z_2^2 } \sim Rayleigh(\sigma)$. Therefore, in order to simulate 1 random variable from $Rayleigh(\sigma)$, we first generate 2 random variables from a Normal distribution with mean 0 and standard deviation $\sigma$.
+From information on the Rayleigh distribution, we know that given two *i.i.d.* random variables $Z_1, Z_2 \sim N(0, \sigma)$ then $R = \sqrt{ Z_1^2 + Z_2^2 } \sim Rayleigh(\sigma)$. Therefore, in order to simulate 1 random variable from $Rayleigh(\sigma)$, we first generate 2 random variables from a Normal distribution with mean 0 and standard deviation $\sigma$.
 
 To generate $N$ Rayleigh random variables, our algorithm would be:
 
@@ -712,7 +775,26 @@ hist(R_Out, col = "gray", border = "white")
 
 
 
+# Apendix
 
+## A Solution to Beta transformation
+
+```{r, echo=TRUE, fig.height=3, fig.width=5}
+par(mar = c(3, 4, 1, 2))
+a = 3                                                    
+b = 10
+
+A = matrix(rexp(10000*a, 1), ncol = a)
+B = matrix(rexp(10000*b, 1), ncol = b)
+numerator = rowSums(A)
+denom = rowSums(A) + rowSums(B)
+betasamples = numerator/denom
+
+hist(betasamples, probability=TRUE, col = "gray", border = "white")
+curve(dbeta(x, a, b), from=0, to=1, add=TRUE, lty=3, lwd = 2)
+
+
+```
 
 
 
