--- a/Bootstrap/4 Intro to Bootstrap.Rmd
+++ b/Bootstrap/4 Intro to Bootstrap.Rmd
@@ -26,20 +26,25 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 
 ## Bootstrap { .selectable }
 
-Bootstrap methods in simple terms are methods of *resampling* observed data to estimate the empirical CDF from which the observed data is supposed to have originate from. Suppose we observe *independent* samples $x_1, ..., x_n$ from pdf/pmf $f$, and whose CDF $F$ is unobservable. Well, given that $X = (x_1, ..., x_n)^T$ originates from $F$, we can use $X$ to generate the empirical CDF $F_n$ which is itself an estimate of $F$. 
+Bootstrap methods are a class of Monte Carlo methods known as nonparametric Monte Carlo. Bootstrap methods in simple terms are methods of *resampling* observed data to estimate the CDF from which the observed data is supposed to have originate from. 
 
-If we sample (with replacement) another set of $n$ observations from $F_n$, we will have $X^* = (x_1^*, ..., x_n^*)^T$. This new sample $X^*$ can then generate another empirical CDF, $F^*_n$ which is another estimate of $F_n$. 
+Suppose we observe *independent* samples $x_1, ..., x_n$ from pdf/pmf $f$, and whose CDF $F$ is unobservable. Well, given that $X = (x_1, ..., x_n)^T$ originates from $F$, we can use $X$ to generate the empirical CDF $F_n$ which is itself an estimate of $F$. 
+
+$$
+F_n \to F \text{ as } n \to \infty
+$$
+
+If we sample (with replacement) another set of $n$ observations from $F_n$, we will have $X^* = (x_1^*, ..., x_n^*)^T$. This new sample $X^*$ can then generate another empirical CDF, $F^*_n$ which is another estimate of $F$. 
 
 That is, $F^*_n$ is a bootstrap estimator of $F$. We can continue this process of resampling with replacement to obtain samples $X^*_1,X^*_2, ..., X^*_B$ and $F^*_{n,1}, F^*_{n,2}, ..., F^*_{n,B}$.
 
-Bootstrap methods are a class of Monte Carlo methods known as nonparametric Monte Carlo.
 
 
 ## Bootstrap { .selectable }
 
-In addition to estimating the theoretical CDF $F$, there may be a statistic of interest $\theta$ (e.g. mean). We can use bootstrap methods to calculate an empirical distribution of $\theta$. From our original sample $X$ we can calculate estimate $\hat{\theta}$. 
+In addition to estimating the theoretical CDF $F$, there may be a statistic of interest $\theta$ (e.g. mean). We can use bootstrap methods to calculate an empirical distribution of $\theta$. 
 
-Our bootstrap sample can also be used to calcualte an estimate, $\hat{\theta}^*_1, ..., \hat{\theta}^*_B$.
+From our original sample $X$ we can calculate estimate $\hat{\theta}$. Similarly, using the bootstrap samples we can also  calcualte estimates for $\theta$: $\hat{\theta}^*_1, ..., \hat{\theta}^*_B$.
 
 We can also calculate Bias and make confidence intervals for our estimates.
 
@@ -50,11 +55,9 @@ A simple bootstrap algorithm for *independent* samples $X = (x_1, ..., x_n)^T$ i
 
 To generate *B* bootstrap samples, for *b* in 1, ..., *B* do
 
-1. Sample $x_1, ..., x_n$ with replacement; each sample has a probability of *1/n* of being in the new sample.
+1. Sample $x_1, ..., x_n$ with replacement to create sample set $X^*_b$. Each observation $x_i$ has a probability of *1/n* of being in the new sample.
 
-2. Calculate $\hat{\theta}^*_b$
-
-We will then observe the empirical distribution of $\hat{\theta}$, $F_{\hat{\theta}}$.
+2. For $X^*_b$ calculate $\hat{\theta}^*_b$
 
 
 ## Bootstrap Example { .selectable }
@@ -66,21 +69,21 @@ We will use the `mtcars` data set to illustrate a simple implementation.
 data("mtcars")
 mpg = mtcars$mpg
 n = length(mpg)
+print(mean(mpg))
 hist(x = mpg, probability = TRUE, xlab = "MPG", main = "Histogram of MPG")
-
 ```
 
 
 ## Bootstrap Example { .selectable }
 
 ```{r, fig.height=3, fig.width=4}
-B = 1000
-results = numeric(B)
+B = 1000 ## number of bootstraps
+results = numeric(B) ## vector to hold results
 for(b in 1:B){
-  i = sample(x = 1:n, size = n, replace = TRUE)
-  bootSample = mpg[i]
-  thetaHat = mean(bootSample)
-  results[b] = thetaHat
+  i = sample(x = 1:n, size = n, replace = TRUE) ## sample indices
+  bootSample = mpg[i] ## get data
+  thetaHat = mean(bootSample) ## calculate the mean for bootstrap sample
+  results[b] = thetaHat ## store results
 }
 
 hist(x = results, probability = TRUE, 
@@ -99,7 +102,11 @@ Before enbarking on resampling methods we must ask what variables are *iid* in o
 
 Bootstrap methods are *not* a method of generating new data for, say, a regression setting when observed samples are low. 
 
-In the above example, it is assumed that each observation in the `mpg` data set is indpendent and identically distributed from an unknown distribution $f$. However, if there were to have existed some autocorrelation structure (as exist in time-series data) then we would need to adjust our resampling methodology. When dealing with time-series data, we will use a method called *block bootsrap*.
+In the above example, it is assumed that each observation in the `mpg` data set is indpendent and identically distributed from an unknown distribution $f$. 
+
+However, if there were to have existed some autocorrelation structure (as exist in time-series data) then we would need to adjust our resampling methodology to account for this correlation. 
+
+When dealing with time-series data, we will use a method called *block bootsrap*.
 
 
 ## Paired Bootstrapping { .selectable }
@@ -108,7 +115,7 @@ Let's continue to work with the `mtcars` data set. Say we wanted to make inferen
 
 ```{r, message=FALSE}
 library(ggplot2, quietly = TRUE) ## for graphics
-mtcars$am <- as.factor(mtcars$am)
+mtcars$am <- as.factor(mtcars$am) ## Transmission (0 = automatic, 1 = manual
 fit = lm(formula = mpg ~ wt + am, data = mtcars)
 data.frame(coefficients = coefficients(fit), CI = confint(fit), check.names = FALSE)
 ```
